--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.5
+FROM tiangolo/uwsgi-nginx-flask:flask
 
 # Set the working directory to /app
 WORKDIR /app
